[package]
name = "webtoc"
version = "0.1.0"
authors = ["Kevin Gimbel <kevin@gimbel.dev>"]
description = "mktoc on the web, thanks to WebAssembly!"
license = "MIT/Apache-2.0"
repository = "https://github.com/KevinGimbel/webtoc"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mktoc = { git = "https://github.com/KevinGimbel/mktoc", branch = "13/extract-toc-renderer" }
wasm-bindgen = "0.2.87"
